--- a/Dolkens.Framework.Caching.Memory/Dolkens.Framework.Caching.Memory.csproj
+++ b/Dolkens.Framework.Caching.Memory/Dolkens.Framework.Caching.Memory.csproj
@@ -36,16 +36,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dolkens.Framework, Version=1.0.5617.31523, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Dolkens.Framework.1.0.5617.31523\lib\net45\Dolkens.Framework.dll</HintPath>
+    <Reference Include="Dolkens.Framework, Version=1.0.5914.25081, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dolkens.Framework.1.0.5914.25081\lib\net45\Dolkens.Framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Dolkens.Framework.Caching">
-      <HintPath>..\packages\Dolkens.Framework.Caching.0.1.5560.19205\lib\net45\Dolkens.Framework.Caching.dll</HintPath>
+    <Reference Include="Dolkens.Framework.Caching, Version=0.1.5914.27697, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dolkens.Framework.Caching.0.1.5914.27697\lib\net45\Dolkens.Framework.Caching.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -64,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Dolkens.Framework.Caching.Memory.nuspec">
       <SubType>Designer</SubType>
     </None>
