--- a/Dolkens.Framework.MVC/Dolkens.Framework.MVC.csproj
+++ b/Dolkens.Framework.MVC/Dolkens.Framework.MVC.csproj
@@ -50,6 +50,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -84,6 +89,8 @@
   <ItemGroup>
     <Compile Include="JsonNetResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApiClient.cs" />
+    <Compile Include="WwwFormUrlEncodedMediaTypeFormatter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
