--- a/Dolkens.Framework.MVC/packages.config
+++ b/Dolkens.Framework.MVC/packages.config
@@ -3,6 +3,7 @@
   <package id="Dolkens.Framework" version="1.0.5914.25081" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" developmentDependency="true" />
