--- a/Dolkens.Framework.MVC/Dolkens.Framework.MVC.csproj
+++ b/Dolkens.Framework.MVC/Dolkens.Framework.MVC.csproj
@@ -87,6 +87,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataTablesResult.cs" />
     <Compile Include="JsonNetResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebApiClient.cs" />
