--- a/Dolkens.Framework.Caching/Dolkens.Framework.Caching.csproj
+++ b/Dolkens.Framework.Caching/Dolkens.Framework.Caching.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CacheUtils.cs" />
+    <Compile Include="Interfaces\ICache.cs" />
     <Compile Include="Interfaces\ICacheDependency.cs">
       <SubType>Code</SubType>
     </Compile>
