Spliting extensions out into Utilities classes, and writing Unit Tests for them

--- a/Dolkens.Framework.MVC/Dolkens.Framework.MVC.csproj
+++ b/Dolkens.Framework.MVC/Dolkens.Framework.MVC.csproj
@@ -37,8 +37,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dolkens.Framework, Version=1.0.6066.21523, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Dolkens.Framework.1.0.6066.21523\lib\net45\Dolkens.Framework.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
