--- a/Dolkens.Framework.Caching/Dolkens.Framework.Caching.csproj
+++ b/Dolkens.Framework.Caching/Dolkens.Framework.Caching.csproj
@@ -37,8 +37,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dolkens.Framework, Version=1.0.6066.21523, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Dolkens.Framework.1.0.6066.21523\lib\net45\Dolkens.Framework.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.4.0.1\lib\40\Newtonsoft.Json.dll</HintPath>
