--- a/Dolkens.Framework/Dolkens.Framework.csproj
+++ b/Dolkens.Framework/Dolkens.Framework.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,8 +58,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BenchmarkSection.cs" />
+    <Compile Include="Bitwise.cs" />
+    <Compile Include="Comparers\OrdinalStringComparer.cs" />
+    <Compile Include="Utilities\BinaryUtilities.cs" />
+    <Compile Include="Utilities\CryptoUtilities.cs" />
+    <Compile Include="Utilities\DateTimeUtilities.cs" />
+    <Compile Include="Utilities\DictionaryUtilities.cs" />
+    <Compile Include="Utilities\EnumerationUtilities.cs" />
+    <Compile Include="Utilities\EnumUtilities.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Utilities\JsonUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\ParserUtilities.cs" />
+    <Compile Include="Utilities\StringUtilities.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
