--- a/Dolkens.Framework.Caching/Dolkens.Framework.Caching.csproj
+++ b/Dolkens.Framework.Caching/Dolkens.Framework.Caching.csproj
@@ -55,13 +55,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheProvider.cs" />
     <Compile Include="CacheUtils.cs" />
+    <Compile Include="DefaultServiceProvider.cs" />
     <Compile Include="Interfaces\ICacheDependency.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Interfaces\ICacheSettings.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Interfaces\ICache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
