--- a/Dolkens.Framework.Caching.Memory/Dolkens.Framework.Caching.Memory.csproj
+++ b/Dolkens.Framework.Caching.Memory/Dolkens.Framework.Caching.Memory.csproj
@@ -36,6 +36,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dolkens.Framework, Version=1.0.6066.21523, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dolkens.Framework.1.0.6066.21523\lib\net45\Dolkens.Framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Dolkens.Framework.Caching, Version=0.1.6505.26599, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dolkens.Framework.Caching.0.1.6505.26599\lib\net45\Dolkens.Framework.Caching.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.4.0.1\lib\40\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -63,16 +71,6 @@
     </None>
     <None Include="nuget.bat" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Dolkens.Framework.Caching\Dolkens.Framework.Caching.csproj">
-      <Project>{d64bf73d-2673-41a1-9a4e-a462dae4d2d1}</Project>
-      <Name>Dolkens.Framework.Caching</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dolkens.Framework\Dolkens.Framework.csproj">
-      <Project>{ccb2d9c2-66f4-4d7a-bbe9-a81e0a37dde0}</Project>
-      <Name>Dolkens.Framework</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
