--- a/Dolkens.Framework.Caching.Memory/packages.config
+++ b/Dolkens.Framework.Caching.Memory/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dolkens.Framework" version="1.0.6066.21523" targetFramework="net45" />
+  <package id="Dolkens.Framework.Caching" version="0.1.6505.26599" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.0.1" targetFramework="net45" />
 </packages>
