--- a/Dolkens.Framework.Caching/Dolkens.Framework.Caching.csproj
+++ b/Dolkens.Framework.Caching/Dolkens.Framework.Caching.csproj
@@ -55,12 +55,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CacheProvider.cs" />
+    <Compile Include="CacheExtensions.cs" />
+    <Compile Include="Providers\TrackingCacheProvider.cs" />
     <Compile Include="CacheUtils.cs" />
-    <Compile Include="DefaultServiceProvider.cs" />
+    <Compile Include="Providers\DefaultServiceProvider.cs" />
     <Compile Include="Interfaces\ICacheDependency.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Interfaces\ICacheProvider.cs" />
     <Compile Include="Interfaces\ICacheSettings.cs">
       <SubType>Code</SubType>
     </Compile>
