--- a/Fluent.FileTransfer/Fluent.Transfer.csproj
+++ b/Fluent.FileTransfer/Fluent.Transfer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChunkedDownloader.cs" />
     <Compile Include="FileTransfer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
