--- a/Dolkens.Framework.Caching.Stub/Dolkens.Framework.Caching.Stub.csproj
+++ b/Dolkens.Framework.Caching.Stub/Dolkens.Framework.Caching.Stub.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30F438FF-18CD-47A0-81C0-D27FF9A2101B}</ProjectGuid>
+    <ProjectGuid>{30F93894-18CD-47A0-81C0-D8938962101B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dolkens.Framework.Caching.Memory</RootNamespace>
-    <AssemblyName>Dolkens.Framework.Caching.Memory</AssemblyName>
+    <RootNamespace>Dolkens.Framework.Caching.Stub</RootNamespace>
+    <AssemblyName>Dolkens.Framework.Caching.Stub</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -66,7 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Dolkens.Framework.Caching.Memory.nuspec">
+    <None Include="Dolkens.Framework.Caching.Stub.nuspec">
       <SubType>Designer</SubType>
     </None>
     <None Include="nuget.bat" />
