--- a/Dolkens.Framework.Telemetry/packages.config
+++ b/Dolkens.Framework.Telemetry/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dolkens.Framework" version="1.0.6458.3035" targetFramework="net45" />
-  <package id="Dolkens.Framework.Caching" version="0.1.6505.30701" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.0.1" targetFramework="net45" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net45" />
 </packages>
